--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "stripe-donation",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server/app.js",
+    "start": "node server/server.js",
     "build": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "firebase-admin": "^11.0.0",
+    "formidable": "^2.0.1",
+    "helmet": "^5.1.0",
+    "stripe": "^9.11.0"
   },
   "engines": {
     "node": "16.14.2"
