--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-markdown": "^8.0.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+		"react-router-dom": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +45,6 @@
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^9.8.8",
     "postcss": "^8.4.14",
-    "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.1.4"
   }
 }
