--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4",
-		"react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "@tailwindcss/typography": "^0.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^9.8.8",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
